<resources>
    <string name="app_name">student</string>

    <string name="button_add_stu">添加</string>
    <string name="button_query_stu">查询</string>

    <string name="menu_add">添加</string>
    <string name="menu_refresh">刷新</string>

    <string name="text_name">姓名</string>
    <string name="text_no">学号</string>
    <string name="text_fender">性别</string>
    <string name="text_collage">学院</string>
    <string name="text_speciality">专业</string>
    <string name="text_hobby">爱好</string>
    <string name="text_birthday">出生日期</string>

    <string name="edit_student_name">输入你的姓名</string>
    <string name="edit_student_no">输入你的学号</string>
    <string name="edit_student_collage">选择你的学院</string>
    <string name="edit_student_speciality">选择你的专业</string>
    <string name="edit_student_birthday">1970&#8211;01&#8211;01</string>
    <string name="edit_query">输入你想查询的内容</string>

    <string name="radio_button_male">男</string>
    <string name="radio_button_female">女</string>

    <string name="check_hobby_literature">文学</string>
    <string name="check_hobby_pe">体育</string>
    <string name="check_hobby_music">音乐</string>
    <string name="check_hobby_art">美术</string>

    <string name="button_submit_info">提交</string>
    <string name="button_cancel">取消</string>

    <string name="speciality_cs">计算机学院</string>
    <string name="speciality_eg">电气学院</string>


    <string name="toast_message">Toast message</string>
    <string name="title_activity_my">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_phone">手机归属地</string>
</resources>
